--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -1,3 +1,3 @@
-.header-menu .menubar .menu-item a.active{
-    color:#0d6efd !important
+.header-menu .menubar .menu-item a.active {
+  color: #0d6efd !important;
 }
