--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -1,3 +1,9 @@
+.header-menu .menubar .menu-item a{
+  transition: all 0.5s ease;
+  color: #757575 !important;
+}
+
 .header-menu .menubar .menu-item a.active {
-  color: #0d6efd !important;
+  color: #2E64AB !important;
+  font-weight: bold;
 }
