--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -1,8 +1,5 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -13,5 +10,7 @@ code {
 }
 
 body {
-  font-family: "Poppins";
+  font-family: "Poppins" !important;
+  letter-spacing: 0.4px;
+  color: #757575 !important;
 }
