--- a/src/CSS/index.css
+++ b/src/CSS/index.css
@@ -13,4 +13,5 @@ body {
   font-family: "Poppins" !important;
   letter-spacing: 0.4px;
   color: #757575 !important;
+  font-size: 12.5px !important;
 }
